# webui-poc

./: CMakeLists.txt  README.md  build  install  webui.code-workspace
frontend/: CMakeLists.txt
frontend/src/components/: machine.js
source/: file_handler.cc  frontend.cc  machine.cc  machine.h  machine_api.cc  rest_server.cc  test-machine.cc
webui/: main.cc
